Fixed login button left margin spacing

--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,7 @@ label {
     margin-top: -3px;
     -ms-flex-item-align: center;
         align-self: center;
-    margin-left: -1rem;
+    margin-left: .25rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
