--- a/sass/components/_login.scss
+++ b/sass/components/_login.scss
@@ -34,6 +34,7 @@
   &__pword-container {
     display: flex;
     flex-direction: column;
+    
 
     & span a {
       padding-top: 5px;
@@ -49,7 +50,7 @@
   &__btn-wrapper {
     margin-top: -3px;
     align-self: center;
-    margin-left: -1rem;
+    margin-left: .25rem;
     display: flex;
     flex-direction: column;
   }
